Created Admin-Moderator Edit Profile

--- a/lostAndFind-client/src/app/pages/admin-mod-profile/admin-mod-profile.component.html
+++ b/lostAndFind-client/src/app/pages/admin-mod-profile/admin-mod-profile.component.html
@@ -98,7 +98,7 @@
                     </div>
                   </div>
 
-                  <div class="form-group">
+                  <!-- <div class="form-group">
                     <div class="col-xs-6">
                       <label for="mobile">
                         <h4>Mobile</h4>
@@ -106,7 +106,7 @@
                       <input type="text" class="form-control" name="mobile" id="mobile"
                         placeholder="enter mobile number" title="enter your mobile number if any.">
                     </div>
-                  </div>
+                  </div> -->
                   <div class="form-group">
 
                     <div class="col-xs-6">
@@ -127,7 +127,7 @@
                         title="enter a location">
                     </div>
                   </div>
-                  <div class="form-group">
+                  <!-- <div class="form-group">
 
                     <div class="col-xs-6">
                       <label for="password">
@@ -146,7 +146,7 @@
                       <input type="password" class="form-control" name="password2" id="password2"
                         placeholder="password2" title="enter your password2.">
                     </div>
-                  </div>
+                  </div> -->
                   <div class="form-group">
                     <div class="col-xs-12">
                       <br>
@@ -199,7 +199,7 @@
                     </div>
                   </div>
 
-                  <div class="form-group">
+                  <!-- <div class="form-group">
                     <div class="col-xs-6">
                       <label for="mobile">
                         <h4>Mobile</h4>
@@ -207,7 +207,7 @@
                       <input type="text" class="form-control" name="mobile" id="mobile"
                         placeholder="enter mobile number" title="enter your mobile number if any.">
                     </div>
-                  </div>
+                  </div> -->
                   <div class="form-group">
 
                     <div class="col-xs-6">
@@ -228,7 +228,7 @@
                         title="enter a location">
                     </div>
                   </div>
-                  <div class="form-group">
+                  <!-- <div class="form-group">
 
                     <div class="col-xs-6">
                       <label for="password">
@@ -247,7 +247,7 @@
                       <input type="password" class="form-control" name="password2" id="password2"
                         placeholder="password2" title="enter your password2.">
                     </div>
-                  </div>
+                  </div> -->
                   <div class="form-group">
                     <div class="col-xs-12">
                       <br>
@@ -297,7 +297,7 @@
                     </div>
                   </div>
 
-                  <div class="form-group">
+                  <!-- <div class="form-group">
                     <div class="col-xs-6">
                       <label for="mobile">
                         <h4>Mobile</h4>
@@ -305,7 +305,7 @@
                       <input type="text" class="form-control" name="mobile" id="mobile"
                         placeholder="enter mobile number" title="enter your mobile number if any.">
                     </div>
-                  </div>
+                  </div> -->
                   <div class="form-group">
 
                     <div class="col-xs-6">
@@ -326,7 +326,7 @@
                         title="enter a location">
                     </div>
                   </div>
-                  <div class="form-group">
+                  <!-- <div class="form-group">
 
                     <div class="col-xs-6">
                       <label for="password">
@@ -345,7 +345,7 @@
                       <input type="password" class="form-control" name="password2" id="password2"
                         placeholder="password2" title="enter your password2.">
                     </div>
-                  </div>
+                  </div> -->
                   <div class="form-group">
                     <div class="col-xs-12">
                       <br>
