make the counters

--- a/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -103,7 +103,7 @@
                         <div class="card text-white bg-primary">
                             <div class="card-header">found</div>
                             <div class="card-body">
-                                <button type="button" class="btn btn-light btn-lg btn-block">{{count}}</button>
+                                <button type="button" class="btn btn-light btn-lg btn-block">{{foundCount}}</button>
                             </div>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
                         <div class="card text-white bg-primary">
                             <div class="card-header">lost</div>
                             <div class="card-body">
-                                <button type="button" class="btn btn-light btn-lg btn-block">{{count}}</button>
+                                <button type="button" class="btn btn-light btn-lg btn-block">{{lostCount}}</button>
                             </div>
                         </div>
                     </div>
