make the complain count

--- a/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -119,7 +119,7 @@
                         <div class="card text-white bg-primary">
                             <div class="card-header">complain</div>
                             <div class="card-body">
-                                <button type="button" class="btn btn-light btn-lg btn-block">300</button>
+                                <button type="button" class="btn btn-light btn-lg btn-block">{{complainCount}}</button>
                             </div>
                         </div>
                     </div>
