--- a/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -49,7 +49,7 @@
             </li>
 
             <li>
-              <a href [routerLink]="'/mod_dashboard'">
+              <a href [routerLink]="'/admin_dashboard'">
                   <i class="fa fa-dashboard"></i>
                   <span>Dashboard</span>
               </a>
@@ -82,9 +82,58 @@
         <h2>Admin Dashboard</h2>
         <hr>
         <div class="row">
-          
+        
+
+
+
+<div class="row mb-4">
+            <div class="col-md-3">
+              <div class="card text-white bg-primary">
+                <div class="card-header">Found</div>
+                <div class="card-body">
+                  <button type="button" class="btn btn-light btn-lg btn-block">500</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card text-white bg-primary">
+                <div class="card-header">Lost</div>
+                <div class="card-body">
+                  <button type="button" class="btn btn-light btn-lg btn-block">150</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card text-white bg-primary">
+                <div class="card-header">Complain</div>
+                <div class="card-body">
+                  <button type="button" class="btn btn-light btn-lg btn-block">300</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card text-white bg-primary">
+                <div class="card-header">ooo</div>
+                <div class="card-body">
+                  <button type="button" class="btn btn-light btn-lg btn-block">500</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
 
         </div>
+        <hr>
+        
+
+        
+
+
+ 
+
+
+        
         
  
 
