create add-moderator side bar

--- a/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -57,13 +57,19 @@
             <li>
               <a href [routerLink]="'/own_item'">
                 <i class="fa fa-plus"></i>
-                <span>Add Moderator</span>
+                <span>Add Item</span>
               </a>
             </li>
             <li>
               <a href [routerLink]="'/mod_profile'">
                 <i class="fa fa-user"></i>
                 <span>Edit profile</span>
+              </a>
+            </li>
+            <li>
+              <a href [routerLink]="'/add_moderator'">
+                <i class="fa fa-plus"></i>
+                <span>Add Moderator</span>
               </a>
             </li>
 
