--- a/lostAndFind-client/src/app/pages/add-moderator/add-moderator.component.html
+++ b/lostAndFind-client/src/app/pages/add-moderator/add-moderator.component.html
@@ -1,1 +1,119 @@
-<p>add-moderator works!</p>
+<body>
+    <div class="page-wrapper chiller-theme toggled">
+      <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
+        <i class="fas fa-bars"></i>
+      </a>
+      <nav id="sidebar" class="sidebar-wrapper">
+        <div class="sidebar-content">
+          <div class="sidebar-brand">
+            <a href="#">Welcome User</a>
+            <div id="close-sidebar">
+              <i class="fas fa-times"></i>
+            </div>
+          </div>
+          <div class="sidebar-header">
+            <div class="user-pic">
+              <img class="img-responsive img-rounded"
+                src="https://raw.githubusercontent.com/azouaoui-med/pro-sidebar-template/gh-pages/src/img/user.jpg"
+                alt="User picture">
+            </div>
+            <div class="user-info">
+              <span class="user-name">{{user.fName}}
+                <strong>{{user.lName}}</strong>
+              </span>
+              <span class="user-role">Admin</span>
+              <span class="user-status">
+                <i class="fa fa-circle"></i>
+                <span>Online</span>
+              </span>
+            </div>
+          </div>
+          <!-- sidebar-header  -->
+          <div class="sidebar-search">
+            <div>
+              <div class="input-group">
+                <input type="text" class="form-control search-menu" placeholder="Search...">
+                <div class="input-group-append">
+                  <span class="input-group-text">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- sidebar-search  -->
+          <div class="sidebar-menu">
+            <ul>
+              <li class="header-menu">
+                <span>General</span>
+              </li>
+  
+              <li>
+                <a href [routerLink]="'/admin_dashboard'">
+                    <i class="fa fa-dashboard"></i>
+                    <span>Dashboard</span>
+                </a>
+            </li>
+              <li>
+                <a href [routerLink]="'/own_item'">
+                  <i class="fa fa-plus"></i>
+                  <span>Add Item</span>
+                </a>
+              </li>
+              <li>
+                <a href [routerLink]="'/mod_profile'">
+                  <i class="fa fa-user"></i>
+                  <span>Edit profile</span>
+                </a>
+              </li>
+              <li>
+                <a href [routerLink]="'/add_moderator'">
+                  <i class="fa fa-plus"></i>
+                  <span>Add Moderator</span>
+                </a>
+              </li>
+  
+  
+  
+            </ul>
+          </div>
+          <!-- sidebar-menu  -->
+        </div>
+        <!-- sidebar-content  -->
+        
+      </nav>
+      <!-- sidebar-wrapper  -->
+      <main class="page-content">
+        <div class="container-fluid">
+          <h2>Admin Dashboard</h2>
+          <hr>
+          <div class="row">
+          </div>
+          
+  
+  
+  
+  <
+          
+  
+  
+   
+  
+  
+          
+          
+   
+  
+          <footer class="text-center">
+            <div class="mb-2">
+          
+            </div>
+      
+          </footer>
+        </div>
+      </main>
+      <!-- page-content" -->
+    </div>
+    <!-- page-wrapper --> 
+  
+  </body>
