--- a/lostAndFind-client/src/app/navigation/navigation.component.html
+++ b/lostAndFind-client/src/app/navigation/navigation.component.html
@@ -25,7 +25,7 @@
           <span class="sr-only">(current)</span>
           </a>
       </li> -->
-      <li class="nav-item ml-5">
+      <!-- <li class="nav-item ml-5">
         <a class="nav-link" href="#">
           <i class="fa fa-envelope-o">
             <span class="badge badge-danger">11</span>
@@ -54,18 +54,18 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
-      </li>
+      </li> -->
     </ul>
 
     <ul class="navbar-nav ">
-      <li class="nav-item mr-5">
+      <!-- <li class="nav-item mr-5">
         <a class="nav-link" href="#">
           <i class="fa fa-bell">
             <span class="badge badge-info">11</span>
           </i>
           Test
         </a>
-      </li>
+      </li> -->
       <!-- <li class="nav-item mr-5">
         <a class="nav-link" href="#">
           <i class="fa fa-globe">
@@ -102,10 +102,10 @@
       </li>
     </ul>
 
-    <form class="form-inline my-2 my-lg-0 mr-5">
+    <!-- <form class="form-inline my-2 my-lg-0 mr-5">
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    </form> -->
 
     <ul class="navbar-nav ">
       <label for="">
