--- a/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
@@ -85,64 +85,67 @@
     <main class="page-content">
       <div class="container-fluid">
         <h2>Moderator Dashboard</h2>
-        <hr>
-        <div class="row">
-        </div>
-        
-        <hr>
-        <div class="row">
-
-
-            <div class="row mb-4">
-            <div class="col-md-3">
+        <br>
+        <div class="row mb-4">
+          <div class="col-md-3">
               <div class="card text-white bg-primary">
-                <div class="card-header">Found</div>
-                <div class="card-body">
-                  <button type="button" class="btn btn-light btn-lg btn-block">500</button>
-                </div>
+                  <div class="card-header">found</div>
+                  <div class="card-body">
+                      <button type="button" class="btn btn-light btn-lg btn-block">{{foundCount}}</button>
+                  </div>
               </div>
-            </div>
-            <div class="col-md-3">
-              <div class="card text-white bg-primary">
-                <div class="card-header">Lost</div>
-                <div class="card-body">
-                  <button type="button" class="btn btn-light btn-lg btn-block">150</button>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="card text-white bg-primary">
-                <div class="card-header">Complain</div>
-                <div class="card-body">
-                  <button type="button" class="btn btn-light btn-lg btn-block">300</button>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="card text-white bg-primary">
-                <div class="card-header">ooo</div>
-                <div class="card-body">
-                  <button type="button" class="btn btn-light btn-lg btn-block">500</button>
-                </div>
-              </div>
-            </div>
           </div>
-
-
-
-        </div>
-        <hr>
-        
-
-        
-
-
- 
-
-        <footer class="text-center">
-          <div class="mb-2">
-        
+          <div class="col-md-3">
+              <div class="card text-white bg-primary">
+                  <div class="card-header">lost</div>
+                  <div class="card-body">
+                      <button type="button" class="btn btn-light btn-lg btn-block">{{lostCount}}</button>
+                  </div>
+              </div>
           </div>
+          <div class="col-md-3">
+              <div class="card text-white bg-primary">
+                  <div class="card-header">complain</div>
+                  <div class="card-body">
+                      <button type="button" class="btn btn-light btn-lg btn-block">{{complainCount}}</button>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-3">
+              <div class="card text-white bg-primary">
+                  <div class="card-header">ooo</div>
+                  <div class="card-body">
+                      <button type="button" class="btn btn-light btn-lg btn-block"></button>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+
+      <ul class="nav nav-tabs nav-justified md-tabs indigo" id="myTabJust" role="tablist">
+          <li class="nav-item">
+              <a class="nav-link active" id="home-tab-just" data-toggle="tab" href="#home-just" role="tab" aria-controls="home-just" aria-selected="true">Home</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" id="profile-tab-just" data-toggle="tab" href="#profile-just" role="tab" aria-controls="profile-just" aria-selected="false">Profile</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" id="contact-tab-just" data-toggle="tab" href="#contact-just" role="tab" aria-controls="contact-just" aria-selected="false">Contact</a>
+          </li>
+      </ul>
+
+      <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+      </div>
+
+      <footer class="text-center">
+          <div class="mb-2"></div>
+
     
         </footer>
       </div>
