Add backend for mod-dashboard

--- a/lostAndFind-client/src/app/pages/edituserprofile/edituserprofile.component.html
+++ b/lostAndFind-client/src/app/pages/edituserprofile/edituserprofile.component.html
@@ -9,7 +9,7 @@
         <div class="container bootstrap snippet">
             <div class="row">
                 <div class="col-sm-10">
-                    <h1>User name</h1>
+                    <h1>Edit Profile</h1>
                 </div>
                 <!-- <div class="col-sm-2">
                     <a href="/users" class="pull-right"><img title="profile image" class="img-circle img-responsive" src="http://www.gravatar.com/avatar/28fd20ccec6865e2d5f0e1f4446eb7bf?s=100"></a>
@@ -42,17 +42,6 @@
                     <br>
 
 
-                    <div class="panel panel-default">
-                        <div class="panel-heading">Social Media</div>
-                        <div class="panel-body">
-                            <i class="fa fa-facebook fa-2x"></i>
-                            <i class="fa fa-github fa-2x"></i>
-                            <i class="fa fa-twitter fa-2x"></i>
-                            <i class="fa fa-pinterest fa-2x"></i>
-                            <i class="fa fa-google-plus fa-2x"></i>
-                        </div>
-                    </div>
-
                 </div>
                 <div class="col-sm-9">
                     <form class="form" [formGroup]="editForm" (ngSubmit)="onSubmit()">
@@ -73,7 +62,7 @@
                             <input type="text" class="form-control" id="lname" formControlName="lname" placeholder="Enter Last Name">
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputPassword1">Teliphone Number</label>
+                            <label for="exampleInputPassword1">Telephone Number</label>
                             <input type="text" class="form-control" id="tnumber" formControlName="tnumber" placeholder="Teliphone Number">
                         </div>
                         <div class="form-group">
