--- a/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
@@ -107,7 +107,7 @@
               <div class="card text-white bg-primary">
                   <div class="card-header">complain</div>
                   <div class="card-body">
-                      <button type="button" class="btn btn-light btn-lg btn-block">{{complainCount}}</button>
+                      <button type="button" class="btn btn-light btn-lg btn-block">{{policeComplainCount}}</button>
                   </div>
               </div>
           </div>
