Admin dashboard backend

--- a/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.scss
+++ b/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.scss
@@ -74,7 +74,7 @@ body {
 }
 
 .page-wrapper .theme.chiller-theme {
-  background: #1e2229;
+  background: #022768;
 }
 
 /*----------------toggeled sidebar----------------*/
@@ -439,7 +439,7 @@ body {
 }
 
 .page-wrapper.chiller-theme.toggled #close-sidebar {
-    color: #bdbdbd;
+    color: #d1bdbd;
 }
 
 .page-wrapper.chiller-theme.toggled #close-sidebar:hover {
