--- a/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -131,7 +131,7 @@
             <div class="card text-white bg-primary">
               <div class="card-header">No.of Found items</div>
               <div class="card-body">
-                <button type="button" class="btn btn-light btn-lg btn-block">500</button>
+                <button type="button" class="btn btn-light btn-lg btn-block">{{allFoundCount}}</button>
               </div>
             </div>
           </div>
