--- a/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -90,7 +90,7 @@
         <div class="row mb-4">
           <div class="col-md-3">
               <div class="card text-white bg-primary">
-                  <div class="card-header">found</div>
+                  <div class="card-header">Found</div>
                   <div class="card-body">
                       <button type="button" class="btn btn-light btn-lg btn-block">{{allFoundCount}}</button>
                   </div>
