--- a/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -98,7 +98,7 @@
           </div>
           <div class="col-md-3">
               <div class="card text-white bg-primary">
-                  <div class="card-header">lost</div>
+                  <div class="card-header">Lost</div>
                   <div class="card-body">
                       <button type="button" class="btn btn-light btn-lg btn-block">{{lostCount}}</button>
                   </div>
