--- a/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -114,7 +114,7 @@
           </div>
           <div class="col-md-3">
               <div class="card text-white bg-primary">
-                  <div class="card-header">ooo</div>
+                  <div class="card-header">No of Users</div>
                   <div class="card-body">
                       <button type="button" class="btn btn-light btn-lg btn-block"></button>
                   </div>
