Admin dashboard link

--- a/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -92,7 +92,7 @@
               <div class="card text-white bg-primary">
                   <div class="card-header">Found</div>
                   <div class="card-body">
-                      <button type="button" class="btn btn-light btn-lg btn-block">{{allFound}}</button>
+                      <button type="button" class="btn btn-light btn-lg btn-block">{{allFoundCount}}</button>
                   </div>
               </div>
           </div>
