--- a/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -96,7 +96,7 @@
                   </div>
               </div>
           </div>
-          <div class="col-md-">
+          <div class="col-md-3">
               <div class="card text-white bg-primary">
                   <div class="card-header">Lost</div>
                   <div class="card-body">
