--- a/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -108,7 +108,7 @@
               <div class="card text-white bg-primary">
                   <div class="card-header">Complain</div>
                   <div class="card-body">
-                      <button type="button" class="btn btn-light btn-lg btn-block">{{complain}}</button>
+                      <button type="button" class="btn btn-light btn-lg btn-block">{{complainCount}}</button>
                   </div>
               </div>
           </div>
