Changes ad dashboard

--- a/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -100,7 +100,7 @@
               <div class="card text-white bg-primary">
                   <div class="card-header">Lost</div>
                   <div class="card-body">
-                      <button type="button" class="btn btn-light btn-lg btn-block">{{lostCount}}</button>
+                      <button type="button" class="btn btn-light btn-lg btn-block">{{lost}}</button>
                   </div>
               </div>
           </div>
